# data-engineering-exersise

./: .gitignore  README.md  app.py  pyproject.toml  requirements.md
data/bronze/recipes/date_published=2003-06-29/: .part-00000-71cab1b7-f93d-452e-a291-090017296974.c000.snappy.parquet.crc  part-00000-71cab1b7-f93d-452e-a291-090017296974.c000.snappy.parquet
data/bronze/recipes/date_published=2003-08-30/: .part-00001-71cab1b7-f93d-452e-a291-090017296974.c000.snappy.parquet.crc  part-00001-71cab1b7-f93d-452e-a291-090017296974.c000.snappy.parquet
data/bronze/recipes/date_published=2003-12-08/: .part-00001-71cab1b7-f93d-452e-a291-090017296974.c000.snappy.parquet.crc  part-00001-71cab1b7-f93d-452e-a291-090017296974.c000.snappy.parquet
data/bronze/recipes/date_published=2004-07-19/: .part-00000-71cab1b7-f93d-452e-a291-090017296974.c000.snappy.parquet.crc  part-00000-71cab1b7-f93d-452e-a291-090017296974.c000.snappy.parquet
data/bronze/recipes/date_published=2004-09-06/: .part-00000-71cab1b7-f93d-452e-a291-090017296974.c000.snappy.parquet.crc  part-00000-71cab1b7-f93d-452e-a291-090017296974.c000.snappy.parquet
data/output/: .part-00000-a7e6dcc4-8952-4bea-a93b-e3dfaf384d12-c000.csv.crc  part-00000-a7e6dcc4-8952-4bea-a93b-e3dfaf384d12-c000.csv
data/silver/recipes/: .part-00000-a275a213-4196-4b13-a3e6-d8c576ca45c5-c000.snappy.parquet.crc  part-00000-a275a213-4196-4b13-a3e6-d8c576ca45c5-c000.snappy.parquet
src/: beef_avg_cook_time.py  load_events.py  recipes_dimension.py  utils.py
(+1984 files in other folders)
