[project]
name = "data-engineering-exercise"
version = "0.1.0"
description = "A simple data engineering exercise using PySpark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark==3.5.3",
]

[dependency-groups]
dev = [
    "chispa>=0.10.1",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
    "pyright>=1.1.387",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
select = [ "D", "E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
